# postgres-keycloak-oauth-validator

./: .gitignore  CODEOWNERS  README.md  demo.md  docker-bake.hcl  install_operators.sh  keycloak.yaml  meson.build
demo/: certificates-issuer.yaml  init_sql-configmap.yaml  keycloak-certificates.yaml  keycloak-db.yaml  keycloak-realm.yaml  keycloak-server.yaml  keycloak-service.yaml  kind-config.yaml  pg_oauth-db.yaml
docker/: Dockerfile
examples/cnpg/: cluster.yaml  pg-init-sql.yaml
examples/keycloak/: demo-realm.json  keycloak.yaml
src/: Makefile  kc_validator.c
